implement Kitchen with multiple threads,  add ordered and cooked pizza queues

--- a/plazza-project/CMakeLists.txt
+++ b/plazza-project/CMakeLists.txt
@@ -6,31 +6,31 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 
 add_executable(plazza_project src/main.cpp
-        src/Cook.cpp
         src/IngredientStock.cpp
-        src/IPC.cpp
         src/Kitchen.cpp
         src/Reception.cpp
-        src/Pizza.cpp
         include/KitchenPool.hpp
         src/KitchenPool.cpp
         include/ipc/IpcMessageType.hpp
         include/ipc/IpcMessage.hpp
-        src/ipc/IpcMessageType.cpp
         include/ipc/IMessageBus.hpp
         include/ipc/KernelQueueMessageBus.hpp
-        include/ipc/ISubscriber.hpp
-        src/ipc/CallbackSubscriber.cpp
-        include/ipc/CallbackSubscriber.hpp
         include/Kitchen.hpp
         include/Kitchen.hpp
         include/ipc/IpcRoutingKeyHolder.hpp
         src/ipc/IpcRoutingKeyHolder.cpp
         include/Reception.hpp
-        include/Order.hpp
         include/KitchenDetails.hpp
         include/ipc/Payloads.hpp
         src/ipc/Payloads.cpp
+        include/RecipeBook.hpp
+        include/ThreadSafeQueue.hpp
+        include/Constants.hpp
+        include/Logger.hpp
+        src/Logger.cpp
+        include/Utils.hpp
+        src/Utils.cpp
+        src/RecipeBook.cpp
 )
 
 
