refactor DTO, refactor Reception

--- a/plazza-project/CMakeLists.txt
+++ b/plazza-project/CMakeLists.txt
@@ -31,6 +31,8 @@ add_executable(plazza_project src/main.cpp
         include/Utils.hpp
         src/Utils.cpp
         src/RecipeBook.cpp
+        include/Order.hpp
+        include/KitchenParams.hpp
 )
 
 
